--- a/css/loginpagestyle.css
+++ b/css/loginpagestyle.css
@@ -61,7 +61,7 @@ img{
 .conn{
     position: absolute;
     color: wheat;
-    font-size:xx-large;
+    font-size:50px;
     font-family: 'Gill Sans MT';
     margin-top: 150px;
     color: #E26400;
