--- a/css/loginpagestyle.css
+++ b/css/loginpagestyle.css
@@ -26,7 +26,7 @@ img{
     color: white;
     margin-top: 350px;
     font-size: 50px;
-    font-family: 'Gill Sans MT';
+    font-family: 'Courier';
     margin-left: 50px;
 }
 
